--- a/index.html
+++ b/index.html
@@ -199,11 +199,11 @@
 		<div class="about-manage flex items-center">
 			<div class="left-skills flex-1">
 				<h1>Skills and<span>&nbsp;Expertise</span></h1>
-				<p>The main area of my expertise is <strong>front-end development (client side of the web) and Machine Learning.</strong></p>
-				<p><span>HTML,&emsp; CSS,&emsp; Bootstrap,&emsp; JavaScript,&emsp;Figma,&emsp; web-apps using Flask</span></p>
-				<p>The other field of my expertise consists of <span>Machine Learning using tensorflow and keras,&emsp; Data Structures and Algorithms,&emsp; Game Development using Unity.</span></p>
+				<p>The wide area of my expertise consists of <strong>full-stack development, cloud technology and Microservice Architecture.</strong></p>
+				<p><span>HTML,&emsp; CSS,&emsp; Bootstrap,&emsp; JavaScript,&emsp;.NET ,&emsp; web-apps using Flask</span></p>
+				<p>The other field of my expertise consists of <span>Machine Learning using tensorflow and keras,&emsp; Data Structures and Algorithms.</span></p>
 				<p>Programming languages familiar with <br><span>C,&emsp; C++,&emsp; JAVA,&emsp; Python,&emsp; JavaScript,&emsp; C#</span></p>
-				<p>Other Industrial skills Known: <span>Git,&emsp; MySQL</span></p> 
+				<p>Other Industrial skills Known: <span>Git,&emsp; MySQL,&emsp; AWS</span></p> 
 				<p>For more details visit my <a href="https://www.linkedin.com/in/ayush-gupta-054318175/">LinkedIn</a> or just <a href="#contact">contact</a> me</p>
 			</div>
 			<div id="tag" class="flex-1">
@@ -385,8 +385,8 @@
 
 		var typed = new Typed(".type", {
 			strings: [
-				"Web Developer",
-				"UI/UX Designer",
+				"Full stack Developer",
+				"Software Engineer",
 				"ML Engineer",
 				"FreeLancer"
 			],
@@ -395,7 +395,7 @@
 			loop:true
 		});
 
-		const theText = 'I am a Web Developer from West Bengal, India also have a good knowledge in the field of Machine Learning and Android Development looking for opportunities in well-reputed Companies that can utilize my creativity and skills in their work and also help me in enhancing and developing my skills to get excel in IT Industry. ';
+		const theText = 'I am a Full-stack Web Developer from West Bengal, India I have an expertise in DotNet as a backend support and React as front-end with a good understanding of AWS as a cloud. I also have a good knowledge in the field of Machine Learning. I am currently working as a Backend Developer but looking for some better opportunities where I could enhance my knowledge and experties with a good working environment, I also have a good leadership quality and my good time management skills always helps me to deliver my work within time constraints. ';
 		const theID = "theID"
 		var i = 0;
 		
