--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
 	<div class="copyright">&copy;Ayush Gupta</div></footer>
 	</section>
 	
-	<script src="http://code.jquery.com/jquery-3.5.1.js"></script>
+	<script src="https://code.jquery.com/jquery-3.5.1.js"></script>
 	<script src="typed.js"></script>
 	<script src="script.js"></script>
 	<script>
@@ -437,8 +437,6 @@
 				{ label : 'Tensorflow'},
 				{ label : 'Git'},
 				{ label : 'MySQL'},
-				{ label : 'Flutter'},
-				{ label : 'React-Native'},
 				{ label : 'BootStrap'},
 				{ label : 'PHP'},
 				{ label : 'DBMS'},
@@ -447,8 +445,10 @@
 				{ label : 'Unity'},
 				{ label : 'Kivy'},
 				{ label : 'C#'},
-				{ label : 'MetaSploit'},
-				{ label : 'Figma'}
+				{ label : 'AWS'},
+				{ label : '.NET'},
+				{ label : 'Microservice'},
+				{ label : 'Agile'}
 
 			];
 			var settings = {
