--- a/index.html
+++ b/index.html
@@ -332,10 +332,11 @@
 			<h1>Contact<span>&nbsp;Me</span></h1>
 			<div class="left-contact ">
 				<div class="contact-form">	
-					<form id="contact-form" method="post" >
-						<input type="text" class="form-control" name="name" placeholder="Your Name" required><br>
-						<input type="Email" class="form-control" name="email" placeholder="Your Email" required><br>
-						<textarea name="message" class="form-control" placeholder="Message" rows="4" required></textarea><br>
+					<form id="contact-form" action="https://formspree.io/f/mwkdwklw" method="POST" >
+						<div><label for="username"></label><input type="text" name="username" placeholder="Username" id="username" required></div><br>
+						<div><label for="email"></label><input type="email" class="form-control" name="email" placeholder="Your Email" required></div><br>
+						<div><label for="subject"></label><input type="text" class="form-control" name="subject" placeholder="subject" id="subject" required></div><br>
+						<div><label for="textarea"></label><textarea name="textarea" class="form-control" placeholder="Message" id="textarea" rows="4" required></textarea></div><br>
 						<input type="submit" value="SEND MESSAGE" class="form-control btn-primary submit">
 					</form>
 				</div>
