--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
 			<div class="left-contact ">
 				<div class="contact-form">	
 					<form id="contact-form" action="https://formspree.io/f/mwkdwklw" method="POST" >
-						<div><label for="username"></label><input type="text" name="username" placeholder="Username" id="username" required></div><br>
+						<div><label for="username"></label><input type="text" name="username" class="form-control" placeholder="Username" id="username" required></div><br>
 						<div><label for="email"></label><input type="email" class="form-control" name="email" placeholder="Your Email" required></div><br>
 						<div><label for="subject"></label><input type="text" class="form-control" name="subject" placeholder="subject" id="subject" required></div><br>
 						<div><label for="textarea"></label><textarea name="textarea" class="form-control" placeholder="Message" id="textarea" rows="4" required></textarea></div><br>
